--- a/wsgi/openshift/templates/home/home.html
+++ b/wsgi/openshift/templates/home/home.html
@@ -112,6 +112,7 @@
     <script src="static/lib/js/jquery.colorbox-min.js"></script>
     <script src="static/lib/js/bootstrap.js"></script>
     <script src="static/lib/select2/select2.min.js"></script>
+    <script src="static/lib/select2/select2_locale_cs.js"></script>
     <script src="static/lib/angular/angular.min.js"></script>
     <script src="static/lib/angular/angular-cookies.js"></script>
     <script src="static/lib/js/raphael.js"></script>
