--- a/wsgi/openshift/templates/home/home.html
+++ b/wsgi/openshift/templates/home/home.html
@@ -4,16 +4,6 @@
     <meta charset="utf-8">
     <title>{{ title }}Zeměpis</title>
     {% if isProduction  %}
-        <script>
-          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-        
-          ga('create', 'UA-43054672-1', 'geography-conqueror.rhcloud.com');
-          ga('send', 'pageview');
-        
-        </script>
         <script type='text/javascript'>
         window.Muscula = { settings:{
             logId:"c851276b-6467-4182-a63a-045d86e9974a", suppressErrors: false, branding: 'none'
@@ -154,6 +144,19 @@
     <script src="static/js/services.js"></script>
     <script src="static/js/filters.js"></script>
     <script src="static/js/directives.js"></script>
+    
+    {% if isProduction  %}
+        <script>
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+        
+          ga('create', 'UA-43054672-1', 'geography-conqueror.rhcloud.com');
+          ga('send', 'pageview');
+        
+        </script>
+    {% endif %}
   </body>
 </html>
 
