--- a/wsgi/openshift/core/static/css/app.css
+++ b/wsgi/openshift/core/static/css/app.css
@@ -365,7 +365,7 @@ ul.dropdown-menu.login {
       padding: 10px; }
   .thumbnail a.btn {
     font-weight: bold;
-    margin: -4px 10px 0 -4px; }
+    margin: -4px 10px 10px -4px; }
 
 .label {
   margin-right: 10px;
