--- a/wsgi/openshift/templates/home/home.html
+++ b/wsgi/openshift/templates/home/home.html
@@ -68,7 +68,7 @@
                   <a id="drop1" href="#" role="button" class="dropdown-toggle" data-toggle="dropdown">Přihlásit se <b class="caret"></b></a>
                   <ul class="dropdown-menu login" role="menu" aria-labelledby="drop1">
                     <li><a class="btn btn-danger btn-large" href="/login/google/"><i class="social-google"></i> přes Google</a></li>
-                    <!--<li><a class="btn btn-primary btn-large" href="/login/facebook/"><i class="social-facebook"></i> přes Facebook</a></li>-->
+                    <li><a class="btn btn-primary btn-large" href="/login/facebook/"><i class="social-facebook"></i> přes Facebook</a></li>
                   </ul>
                 </li>
                 <li class="dropdown" ng-show="user.username != ''">
